--- a/prog/build.gradle
+++ b/prog/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'jacoco'
 }
 
 group = 'com.prog'
@@ -10,6 +11,19 @@ version = '0.0.1-SNAPSHOT'
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
+	}
+}
+jacoco{
+	toolVersion = '0.8.7'
+}
+tasks.test{
+	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+jacocoTestReport{
+	reports{
+		sml.required = true
+		html.required = true
 	}
 }
 
@@ -25,6 +39,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
